--- a/SonifiedClassification/index.html
+++ b/SonifiedClassification/index.html
@@ -11,7 +11,7 @@
     <h1>Sonified Classification</h1>
     <ul>
      <p>
-    </p><li>Click on either Red or Green button to chose a color. Add that color (or training data) to the canvas by clicking on the Canvas.</li>
+    </p><li>Click on either Red or Green button to choose a color. Add both colors (or training data) to the canvas by clicking on the Canvas.</li>
    <li> After giving enough data points, click on the Train Model button. </li>
       <li> Move your mouse/hand on the Canvas to hear the sonified classification.</li>
    <p></p>
