changed NOTAAT sign

--- a/CreationOfBirds6/index.html
+++ b/CreationOfBirds6/index.html
@@ -20,7 +20,7 @@
       <li> Click a screenshot and share! </li>
         <i> Works best on cell phones and tablets </i>
    <p></p>
-        <p> © <a href="//sultanazana.github.io/dreams.io/notaat.html"> NOTAAT </a> 2021  </p>
+        <p> © <a href="https://sultanazana.github.io/dreams.io/notaat.html"> NOTAAT </a> 2021  </p>
 
     </ul>
       
